feat: 实现用户管理模块并重构业务相关命名
refactor: 将"分组"统一更名为"业务"以更准确描述功能
fix: 修复系统状态检查逻辑，增加实际API调用
feat: 添加用户状态枚举和DTO类
feat: 实现用户CRUD接口及相关服务
feat: 前端添加用户管理界面和路由权限控制
style: 优化前端样式和交互体验
docs: 更新相关文档注释和接口描述
build: 更新依赖版本和Dockerfile配置
ci: 调整CI配置和健康检查
test: 添加用户管理相关测试用例